<?xml version="1.0" encoding="UTF-8"?>
<!--
    (c) https://github.com/MontiCore/monticore
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- OUR OWN PROJECT -->
    <groupId>montisim</groupId>
    <artifactId>simulation</artifactId>
    <version>${revision}</version>
    <!-- Packaging pom because there are no source files in this project -->
    <packaging>pom</packaging>

    <!-- MODULES -->
    <modules>
        <module>sim-commons</module>
        <module>eesimulator</module>
        <module>environment</module>
        <module>vehicle</module>
        <module>eecomponents</module>
        <module>simulator</module>
    </modules>
    <properties>

        <!-- USE THIS VARIABLE TO SET THE VERSION OF THIS PROJECT AND ALL SUB PROJECTS -->
        <revision>3.3.6</revision>
        <projectversion>${revision}</projectversion>

        <!-- USE THESE TO SET THE VERSIONS OF THE DEPENDENCIES FOR ALL THE SUB-PROJECTS -->
        <commons.version>2.1.4</commons.version>
        <controller.version>1.1.0</controller.version>

        <assembly.plugin>2.5.4</assembly.plugin>
        <compiler.plugin>3.3</compiler.plugin>
        <source.plugin>3.2.0</source.plugin>
        <java.version>1.8</java.version>
        <jacoco.plugin>0.8.2</jacoco.plugin>
    </properties>
    <!-- PROJECT DEPENDENCIES -->
    <dependencies>

        <!-- JUnit for testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.5.13</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>montisim</groupId>
            <artifactId>commons</artifactId>
            <version>${commons.version}</version>
        </dependency>

    </dependencies>

    <!-- == PROJECT BUILD SETTINGS =========================================== -->

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>

            <!-- Other Configuration -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin}</version>
                <configuration>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- Source Jar Configuration -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${source.plugin}</version>
                <executions>
                    <execution>
                        <id>create source jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                        <configuration>
                            <excludeResources>false</excludeResources>
                            <includes>
                                <include>**/*.java</include>
                                <include>**/*.ftl</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- to add copyright information automatically-->
            <!-- <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <header>${project.baseUri}/license/se/license.txt</header>
                    <excludes>
                        <exclude>**/README</exclude>
                        <exclude>src/test/resources/**</exclude>
                        <exclude>src/main/resources/**</exclude>
                        <exclude>**/license/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin> -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.3.0</version>
                <configuration>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <format>xml</format>
                    <maxmem>256m</maxmem>
                    <!-- aggregated reports for multi-module projects -->
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>

            <!-- Test coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.plugin}</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Flatten plugin: allow the use of the ${revision} property -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>


        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>se-nexus</id>
            <url>https://nexus.se.rwth-aachen.de/content/repositories/embeddedmontiarc-releases/</url>
        </repository>
        <snapshotRepository>
            <id>se-nexus</id>
            <url>https://nexus.se.rwth-aachen.de/content/repositories/embeddedmontiarc-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>se-nexus</id>
            <name>SE-Nexus repository</name>
            <url>https://nexus.se.rwth-aachen.de/content/groups/public</url>
        </repository>

        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>
</project>

